# django-blog

./: Dockerfile  apprunner.yaml  db.sqlite3  pyproject.toml  requirements.txt
blog/: views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: about.html  base.html  home.html  post_detail.html  user_post.html
django_project/: settings.py  urls.py
users/: views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html
